--- a/index.html
+++ b/index.html
@@ -13,39 +13,45 @@
 
     * { box-sizing: border-box; }
 
-    /* Locks the entire page to the screen height */
     html, body {
-        height: 100vh;
+        /* Use dvh to account for mobile browser bars */
+        height: 100dvh; 
         width: 100vw;
         margin: 0;
         padding: 0;
         overflow: hidden; 
         background-color: var(--bg-color);
         font-family: -apple-system, sans-serif;
-        position: fixed; /* Prevents "bounce" scrolling on iOS */
+        /* Prevents the 'bounce' effect on iOS */
+        position: fixed;
     }
 
-    body { display: flex; flex-direction: column; }
+    body { 
+        display: flex; 
+        flex-direction: column; 
+        height: 100dvh;
+    }
 
     .header {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        height: 50px;
+        height: 44px; /* Slightly smaller for mobile */
         padding: 0 15px;
         color: white;
         flex-shrink: 0;
     }
 
-    /* Main Container: Specifically sets height to fill remaining space */
     .game-container {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        gap: 8px;
-        padding: 8px;
-        flex: 1;
-        min-height: 0; /* Allows children to shrink below their content size */
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        gap: 6px;
+        padding: 6px;
+        flex-grow: 1;
+        /* Force the container to never exceed the remaining height */
+        height: calc(100dvh - 50px);
+        min-height: 0; 
     }
 
     .tabla {
@@ -56,23 +62,26 @@
         background-color: #fff;
         height: 100%;
         width: 100%;
+        min-height: 0;
         overflow: hidden;
     }
 
     .cell {
         position: relative;
-        border: 1px solid #eee;
+        border: 0.5px solid #eee;
         cursor: pointer;
         display: flex;
         align-items: center;
         justify-content: center;
-        min-height: 0; 
+        min-height: 0;
+        min-width: 0;
     }
 
     .cell img {
         width: 100%;
         height: 100%;
-        object-fit: fill; /* Forces cards into the squares without overflow */
+        /* 'fill' is necessary to ignore the image's internal aspect ratio */
+        object-fit: fill; 
         display: block;
         pointer-events: none;
     }
@@ -80,22 +89,21 @@
     .cell.marked::after {
         content: '';
         position: absolute;
-        width: 60%;
-        height: 40%;
+        width: 70%;
+        height: 50%;
         background-color: var(--marker-color);
         border-radius: 50%;
-        box-shadow: 0 2px 6px rgba(0,0,0,0.4);
+        box-shadow: 0 2px 4px rgba(0,0,0,0.5);
         z-index: 10;
     }
 
     button {
-        padding: 8px 16px;
+        padding: 6px 12px;
         background-color: #d9534f;
         color: white;
         border: none;
         border-radius: 4px;
-        cursor: pointer;
-        font-weight: bold;
+        font-size: 0.9rem;
     }
 </style>
 </head>
@@ -198,3 +206,4 @@
 </body>
 
 </html>
+
