--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Loteria - iPad 8th Gen</title>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Loteria">
+    <title>Loteria Digital</title>
     <style>
         :root {
             --marker-color: rgba(230, 50, 50, 0.9);
@@ -20,25 +23,28 @@
             background-color: var(--bg-color);
             font-family: -apple-system, sans-serif;
             position: fixed;
+            /* Respects the iPad status bar area when in standalone mode */
+            padding-top: env(safe-area-inset-top); 
         }
 
         body { display: flex; flex-direction: column; align-items: center; }
 
         .header {
             display: flex; justify-content: space-between; align-items: center;
-            height: 44px; width: 100%; padding: 0 15px; color: #555; flex-shrink: 0;
+            height: 50px; width: 100%; padding: 0 15px; color: #555; flex-shrink: 0;
+            z-index: 10;
         }
 
         .game-container {
             display: grid; 
+            /* Optimized for Portrait: 2x2 grid still fits best on 10.2" screen */
             grid-template-columns: repeat(2, auto); 
             grid-template-rows: repeat(2, auto);
-            gap: 15px; 
-            padding: 5px;
+            gap: 12px; 
+            padding: 10px;
             flex-grow: 1;
             align-content: center;
             justify-content: center;
-            height: calc(100dvh - 44px);
             width: 100%;
         }
 
@@ -48,21 +54,18 @@
             grid-template-rows: repeat(4, 1fr);
             border: 2px solid var(--card-border); 
             background-color: #fff;
-            height: 45vh; 
+            height: 42vh; /* Slightly reduced height for portrait clearance */
             aspect-ratio: 2 / 3; 
         }
 
         .cell {
-            position: relative; 
-            border: 0.5px solid #ddd;
+            position: relative; border: 0.5px solid #ddd;
             display: flex; align-items: center; justify-content: center;
-            overflow: hidden;
-            background-color: #fff;
+            overflow: hidden; background-color: #fff;
         }
 
         .cell img { 
-            width: 100%; height: 100%; 
-            object-fit: contain; 
+            width: 100%; height: 100%; object-fit: contain; 
             display: block; position: relative; z-index: 1;
         }
 
@@ -73,7 +76,6 @@
             box-shadow: 0 2px 6px rgba(0,0,0,0.5);
         }
 
-        /* Enlarged Edit Overlay for iPad */
         #edit-overlay {
             display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background: rgba(0, 0, 0, 0.95); z-index: 200; flex-direction: column;
@@ -82,27 +84,13 @@
         #edit-overlay.open { display: flex; }
 
         .selection-grid {
-            display: grid; 
-            grid-template-columns: repeat(6, 1fr); /* Increased columns for iPad */
-            gap: 12px;
-            max-height: 80vh; 
-            overflow-y: scroll; 
-            padding: 20px; 
-            width: 100%; 
-            max-width: 1000px;
+            display: grid; grid-template-columns: repeat(4, 1fr); gap: 12px;
+            max-height: 80vh; overflow-y: scroll; padding: 20px; width: 100%; max-width: 800px;
         }
-        .selection-item { 
-            background: #1a1a1a; 
-            border: 1px solid #333; 
-            padding: 8px; 
-            text-align: center; 
-            color: #888; 
-            border-radius: 6px;
-        }
-        .selection-item img { width: 100%; height: auto; border-radius: 4px; }
-        .selection-item:active { background: #333; }
+        .selection-item { background: #1a1a1a; border: 1px solid #333; padding: 8px; border-radius: 6px; }
+        .selection-item img { width: 100%; height: auto; }
 
-        button { padding: 8px 16px; background-color: #1a1a1a; color: #777; border: 1px solid #333; border-radius: 4px; font-weight: 500; }
+        button { padding: 8px 16px; background-color: #1a1a1a; color: #777; border: 1px solid #333; border-radius: 4px; }
         button.active { background-color: #d9534f; color: white; border-color: #d9534f; }
     </style>
 </head>
@@ -111,22 +99,22 @@
     <div class="header">
         <div>
             <button onclick="toggleSettings()">⚙️ Menu</button>
-            <button id="editBtn" onclick="toggleEditMode()">Edit Mode</button>
+            <button id="editBtn" onclick="toggleEditMode()">Edit</button>
         </div>
         <button onclick="resetGame()">Clear Board</button>
     </div>
 
-    <div id="settings-panel" style="display:none; position:fixed; top:55px; left:15px; background:#1a1a1a; padding:20px; z-index:100; border:1px solid #333; border-radius:8px; box-shadow: 0 4px 15px rgba(0,0,0,0.5);">
-        <label style="color:#888; font-size: 0.8rem; text-transform: uppercase;">Marker Color</label><br>
-        <input type="color" id="colorPicker" value="#e63232" style="width:100%; height:40px; margin-top:8px; border:none; background:none;" onchange="updateColor(this.value)"><br><br>
+    <div id="settings-panel" style="display:none; position:fixed; top:100px; left:20px; background:#1a1a1a; padding:20px; z-index:100; border:1px solid #333; border-radius:8px;">
+        <label style="color:#888; font-size: 0.8rem;">MARKER COLOR</label><br>
+        <input type="color" id="colorPicker" value="#e63232" style="width:100%; height:40px; margin:8px 0;" onchange="updateColor(this.value)"><br>
         <button onclick="factoryReset()" style="width:100%; margin-bottom:10px;">Factory Reset</button>
         <button onclick="toggleSettings()" style="width:100%;">Close</button>
     </div>
 
     <div id="edit-overlay">
-        <h3 style="color:white; margin-bottom: 15px;">Select Replacement</h3>
+        <h3 style="color:white; margin-bottom: 15px;">Select Card</h3>
         <div id="selection-grid" class="selection-grid"></div>
-        <button onclick="closeEditOverlay()" style="margin-top:20px; padding:15px; width:100%; max-width:400px;">Cancel</button>
+        <button onclick="closeEditOverlay()" style="margin-top:20px; padding:15px; width:100%; max-width:300px;">Cancel</button>
     </div>
 
     <div id="main-container" class="game-container"></div>
@@ -165,7 +153,7 @@
                     const cell = document.createElement('div');
                     cell.className = 'cell';
                     cell.dataset.cardName = boardImages[idx];
-                    cell.onclick = (e) => handleCellClick(cell, idx);
+                    cell.onclick = () => handleCellClick(cell, idx);
                     const img = document.createElement('img');
                     img.src = boardImages[idx];
                     cell.appendChild(img);
@@ -180,9 +168,7 @@
             else {
                 const name = element.dataset.cardName;
                 const isMarked = element.classList.contains('marked');
-                // Global Marking: Select all matching cards across all boards
-                const allMatching = document.querySelectorAll(`.cell[data-card-name="${name}"]`);
-                allMatching.forEach(c => isMarked ? c.classList.remove('marked') : c.classList.add('marked'));
+                document.querySelectorAll(`.cell[data-card-name="${name}"]`).forEach(c => isMarked ? c.classList.remove('marked') : c.classList.add('marked'));
             }
         }
 
@@ -204,7 +190,7 @@
         function toggleEditMode() { isEditMode = !isEditMode; document.getElementById('editBtn').classList.toggle('active'); }
         function toggleSettings() { const s = document.getElementById('settings-panel'); s.style.display = s.style.display === 'none' ? 'block' : 'none'; }
         function resetGame() { document.querySelectorAll('.cell.marked').forEach(el => el.classList.remove('marked')); }
-        function factoryReset() { if(confirm("Reset all edits?")) { boardImages = [...fullLayout]; localStorage.setItem('loteria-images', JSON.stringify(boardImages)); renderBoards(); } }
+        function factoryReset() { if(confirm("Reset boards?")) { boardImages = [...fullLayout]; localStorage.setItem('loteria-images', JSON.stringify(boardImages)); renderBoards(); } }
         function updateColor(v) { document.documentElement.style.setProperty('--marker-color', v + 'E6'); localStorage.setItem('loteria-color', v); }
         function loadSettings() {
             const c = localStorage.getItem('loteria-color');
