--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         const cardLibrary = ["ElGallo.jpg", "ElDiablito.jpg", "LaDama.jpg", "ElCatrin.jpg", "ElParaguas.jpg", "LaSirena.jpg", "LaEscalera.jpg", "LaBotella.jpg", "ElBarril.jpg", "ElArbol.jpg", "ElMelon.jpg", "ElValiente.jpg", "ElGorrito.jpg", "LaMuerte.jpg", "LaPera.jpg", "LaBandera.jpg", "ElBandolon.jpg", "ElVioloncello.jpg", "LaGarza.jpg", "ElPajaro.jpg", "LaMano.jpg", "LaBota.jpg", "LaLuna.jpg", "ElCotorro.jpg", "ElBorracho.jpg", "ElNegrito.jpg", "ElCorazon.jpg", "LaSandia.jpg", "ElTambor.jpg", "ElCamaron.jpg", "LasJaras.jpg", "ElMusico.jpg", "LaArana.jpg", "LaEstrella.jpg", "ElCazo.jpg", "ElMundo.jpg", "ElApache.jpg", "ElNopal.jpg", "ElAlacran.jpg", "LaRosa.jpg", "LaCalavera.jpg", "LaCampana.jpg", "ElCantarito.jpg", "ElVenado.jpg", "ElSol.jpg", "LaCorona.jpg", "LaChalupa.jpg", "ElPino.jpg", "ElPescado.jpg", "LaPalma.jpg", "LaMaceta.jpg", "ElArpa.jpg", "LaRana.jpg", "ElSoldado.jpg"];
 
         const b1 = ["ElMelon.jpg", "ElCotorro.jpg", "LaCampana.jpg", "LaArana.jpg", "LaBandera.jpg", "LaPalma.jpg", "ElTambor.jpg", "LaMaceta.jpg", "ElNegrito.jpg", "LasJaras.jpg", "LasJaras.jpg", "ElPino.jpg", "LaBota.jpg", "LaGarza.jpg", "ElCantarito.jpg", "ElPescado.jpg"];
-        const b2 = ["ElVenado.jpg", "ElParaguas.jpg", "ElCatrin.jpg", "ElMusico.jpg", "ElCazo.jpg", "LaCorona.jpg", "LaCorona.jpg", "ElValiente", "LaPera.jpg", "ElBarril.jpg", "LaEstrella.jpg", "LaSandia.jpg", "ElPajaro.jpg", "ElNegrito.jpg", "LaBotella.jpg", "ElMundo.jpg"];
+        const b2 = ["ElVenado.jpg", "ElParaguas.jpg", "ElCatrin.jpg", "ElMusico.jpg", "ElCazo.jpg", "LaCorona.jpg", "LaCorona.jpg", "ElValiente.jpg", "LaPera.jpg", "ElBarril.jpg", "LaEstrella.jpg", "LaSandia.jpg", "ElPajaro.jpg", "ElNegrito.jpg", "LaBotella.jpg", "ElMundo.jpg"];
         const b3 = ["ElGallo.jpg", "ElNopal.jpg", "ElDiablito.jpg", "LaMano.jpg", "ElApache.jpg", "LaChalupa.jpg", "LaChalupa.jpg", "ElGorrito.jpg", "LaDama.jpg", "LaMuerte.jpg", "LaLuna.jpg", "ElSoldado.jpg", "ElVioloncello.jpg", "LaEstrella.jpg", "LaSirena.jpg", "ElCamaron.jpg"];
         const b4 = ["LaPera.jpg", "ElBorracho.jpg", "ElSoldado.jpg", "ElBandolon.jpg", "ElAlacran.jpg", "LaRosa.jpg", "LaRosa.jpg", "LaEscalera.jpg", "ElSol.jpg", "ElValiente.jpg", "LaCalavera.jpg", "ElArpa.jpg", "LaRana.jpg", "ElArbol.jpg", "ElCorazon.jpg", "ElApache.jpg"];
 
@@ -268,5 +268,6 @@
     </script>
 </body>
 </html>
+
 
 
