--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             display: flex; justify-content: space-between; align-items: center;
             height: 40px; width: 100%; padding: 0 10px; color: #444; flex-shrink: 0;
             z-index: 10;
+            margin-top: 25px;
         }
 
         .game-container {
@@ -268,6 +269,7 @@
     </script>
 </body>
 </html>
+
 
 
 
