--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 </head>
 <body onload="initialize()">
 
-    <div id="win-popup" onclick="this.style.display='none'">LOTERIA!</div>
+    <div id="win-popup" onclick="this.style.display='none'">Buenas!</div>
 
     <div class="header">
         <div>
@@ -141,9 +141,8 @@
 
     <div id="pattern-panel">
         <label style="color:#666; font-size: 0.7rem;">WIN LOGIC</label><br><br>
-        <button class="pattern-btn" onclick="applyPattern('none')">Siete Loco (First to 7)</button>
-        <button class="pattern-btn" onclick="applyPattern('classic')">Classic (Line/Corner/2x2)</button>
-        <hr style="border:0; border-top:1px solid #333; margin: 10px 0;">
+        <button class="pattern-btn" onclick="applyPattern('classic')">Classic</button>
+        <button class="pattern-btn" onclick="applyPattern('none')">Siete Loco</button>
         <button class="pattern-btn" onclick="applyPattern('L')">The "L"</button>
         <button class="pattern-btn" onclick="applyPattern('rails')">Rails (Mid Rows)</button>
         <button class="pattern-btn" onclick="applyPattern('escalera')">Escalera (Mid Cols)</button>
@@ -336,3 +335,4 @@
     </script>
 </body>
 </html>
+
