--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="notranslate" translate="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
@@ -121,7 +121,7 @@
 </head>
 <body onload="initialize()">
 
-    <div id="win-popup" onclick="this.style.display='none'">Buenas!</div>
+    <div id="win-popup" translate="no" onclick="this.style.display='none'">Buenas!</div>
 
     <div class="header">
         <div>
@@ -335,4 +335,5 @@
     </script>
 </body>
 </html>
+
 
